Adds Protection section w/ responsiveness to ~ 1280

--- a/index.html
+++ b/index.html
@@ -737,6 +737,76 @@
         </h5>
       </div>
     </div>
+
+    <!-- Protection & Insurance
+------------------------------------------- -->
+    <article id="protection" class="bg-dark txt-white panel">
+      <section id="heading" class="flex">
+        <header class="title">
+          <h2 class="uppercase txt-900">Protection &</h2>
+          <div class="h-underline"></div>
+          <h3 class="uppercase txt-900">Insurance</h3>
+        </header>
+        <div id="right-side-flex">
+          <p class="subheading" id="protection-subheading">
+            Total protection for peace of mind
+          </p>
+          <div id="three-boxes">
+            <h6 class="box uppercase">Assets</h6>
+            <h6 class="box uppercase">Family</h6>
+            <h6 class="box uppercase">Living Standards</h6>
+          </div>
+        </div>
+      </section>
+
+      <img src="assets/hands-signing-document.jpg" alt="" id="signing-form" />
+      <p>
+        We provide 6 crucial personal and property protection services, tailored
+        to your needs to give you that extra comfort.
+      </p>
+      <!-- Link Wrap ----------------------------->
+      <section class="link-list-wrap flex">
+        <!-- Link List -------------------------->
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Protection</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Life Insurance</a>
+          </li>
+        </ul>
+        <!-- Link List ------------------------>
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Critical Illness Cover</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900"
+              >Income Protection Insurance</a
+            >
+          </li>
+        </ul>
+        <!-- Link List -------------------------->
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900"
+              >Accident, Sickness, Unemployment</a
+            >
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900"
+              >Buildings & Contents Insurance</a
+            >
+          </li>
+        </ul>
+      </section>
+    </article>
     <script src="script.js"></script>
   </body>
 </html>
