Adds Call Free section, updates agent-2.png ~ 1280

--- a/index.html
+++ b/index.html
@@ -806,6 +806,15 @@
           </li>
         </ul>
       </section>
+      <section id="call-free" class="bg-dark flex">
+        <div id="number">
+          <h3 class="txt-white uppercase txt-900">Call Free 7 Days a Week</h3>
+          <a href="tel:+448000113395" class="number txt-fuschia txt-900"
+            >0800 011 3395</a
+          >
+        </div>
+        <img src="assets/agent-2.png" alt="" />
+      </section>
     </article>
     <script src="script.js"></script>
   </body>
