Adds About Us andContact Us sections ~ 1300

--- a/index.html
+++ b/index.html
@@ -816,6 +816,71 @@
         <img src="assets/agent-2.png" alt="" />
       </section>
     </article>
+
+    <!-- About Us
+------------------------------------------- -->
+    <article id="about-us" class="panel">
+      <header class="title">
+        <h2 class="uppercase txt-900">About Us</h2>
+        <div class="h-underline"></div>
+      </header>
+      <section id="3-points">
+        <div class="point txt-white txt-900">
+          <p id="one">21+ Years Finance & Property Experience</p>
+        </div>
+        <div class="point txt-white">
+          <p id="two">We specialise in complex finance & mortgage services</p>
+          <div class="h-underline"></div>
+        </div>
+        <div class="point txt-white">
+          <p id="three">
+            In the world of finance, it's not just about what we know, it's
+            about who... that's why we get results.
+          </p>
+        </div>
+      </section>
+      <section class="write-up flex txt-white">
+        <p>
+          With our wealth of experience stretching over 21 years, we offer
+          specialist advice to source tailored mortgage & insurance solutions
+          for customers, even for the most complicated cases. At Direct
+          mortgages we only deal directly with underwriters and decision makers,
+          therefore no lengthy processing procedures, delays and no middlemen
+          meaning we are in a very unique position to secure funding for complex
+          scenarios where others can’t. We pride ourselves in getting the very
+          best deals for our clients and securing funds quickly.
+        </p>
+        <p>
+          As a whole of market mortgage broker, Direct Mortgages can smooth out
+          the creases by providing dedicated & informed services to make your
+          mortgage as simple as it can be. We regularly deal with challenging
+          applications as this is what we specialise in and what we do extremely
+          well. With our vast knowledge and experience in this industry, we can
+          secure and deliver bespoke finance results regardless of your status,
+          credit or unusual requirements.
+        </p>
+      </section>
+    </article>
+    <!-- Contact Us
+------------------------------------------- -->
+    <div id="contact-us-wrap" class="panel bg-dark txt-white">
+      <div class="inner">
+        <h4 class="txt-white txt-900 uppercase">No Completion No Fee</h4>
+        <div id="contact-us-inner-flex" class="flex uppercase">
+          <img src="assets/agent-3.png" alt="" />
+          <div id="contact-info">
+            <h2 class="txt-fuschia txt-900">Contact Us</h2>
+            <a href="tel:+448000113395" class="number txt-900">0800 011 3395</a>
+            <a
+              href="mailto:info@directmortgagesuk.com"
+              class="mail-link txt-white txt-900"
+              >info@directmortgagesuk.com</a
+            >
+          </div>
+        </div>
+        <h5 class="uppercase txt-900">7 Days Sat and Sun 11am-5pm</h5>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
