--- a/index.html
+++ b/index.html
@@ -881,6 +881,48 @@
         <h5 class="uppercase txt-900">7 Days Sat and Sun 11am-5pm</h5>
       </div>
     </div>
+    <footer class="flex bg-fuschia panel">
+      <div class="footer-contact">
+        <img src="assets/logo-alt.svg" alt="" />
+        <div class="contact">
+          <a href="tel:+448000113395" class="number txt-900">0800 011 3395</a>
+        </div>
+        <div class="contact">
+          <a
+            href="mailto:info@directmortgagesuk.com"
+            class="mail-link txt-white txt-900"
+            >info@directmortgagesuk.com</a
+          >
+        </div>
+      </div>
+      <div class="address">
+        <h6>Address</h6>
+        <p>
+          Registered as a Limited Company in England & Wales No 05668905.<br />
+          Registered Address:<br />Rosemount House,<br />
+          2-4 Chequers Road,<br />
+          Basingstoke,<br />
+          RG21 7PU.
+        </p>
+      </div>
+      <div class="legal">
+        <h6>Disclaimer</h6>
+        <p>
+          Direct Mortgages is a trading style of Rosemount Wealth Management IFA
+          which is an Appointed Representative of Rosemount Financial Solutions
+          (IFA) Ltd which is authorised and regulated by the Financial Conduct
+          Authority (535515).
+        </p>
+      </div>
+      <div class="sitemap">
+        <h6>Sitemap</h6>
+        <a href="">Home</a>
+        <a href="">Bad Credit</a>
+        <a href="">Mortgages</a>
+        <a href="">Protection</a>
+        <a href="">Contact Us</a>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
