Adds Bad Credit Write Up Page w/ inital styling

--- a/index.html
+++ b/index.html
@@ -33,10 +33,21 @@
           >
         </div>
       </div>
+
+      <label class="menu-label" for="menuBtn"
+        ><span class="label-icon"></span
+      ></label>
     </header>
 
     <!-- Navbar 
 ------------------------------------------- -->
+    <input
+      class="menuBtn"
+      type="checkbox"
+      name="menuBtn"
+      id="menuBtn"
+      data-group="group8"
+    />
     <nav class="main-nav-wrap bg-dark txt-white">
       <ul class="main-nav flex txt-center">
         <li class="main-nav-link border-left">
@@ -47,83 +58,113 @@
           <label for="bad-credit-input" class="dropdown no-display"
             >Bad Credit</label
           >
-          <a href="#bad-credit">Bad Credit</a>
+          <a href="bad-credit.html" class="top-link">Bad Credit</a>
           <input type="checkbox" id="bad-credit-input" class="no-display" />
           <!-- Bad Credit Drop Down -->
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Low Income</a
+              <a
+                href="bad-credit.html#repossessions"
+                class="dropdown-link hover-transition hover-pink"
+                >Repossessions</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >No Proof Of Income</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >No Credit History</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Low Credit Score</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Repossession</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >IVA's</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >CCJ's</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Bankruptcy</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Defaults</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="bad-credit.html#pay-day-loans"
+                class="dropdown-link hover-transition hover-pink"
                 >Pay Day Loans</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="bad-credit.html#zero-hour-contract"
+                class="dropdown-link hover-transition hover-pink"
+                >Zero Hour Contracts</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html#low-income"
+                class="dropdown-link hover-transition hover-pink"
+                >Low Income</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html#no-proof-income"
+                class="dropdown-link hover-transition hover-pink"
+                >No Proof of Income</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >No Credit History</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >Low Credit Score</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >IVA's</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >CCJ's</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >Bankruptcy</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >Defaults</a
+              >
+            </li>
+            <li class="dropdown-link-wrap">
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
                 >Self Employed No Accounts</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Missed Mortgage Payments</a
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
+                >Missed / Late Mortgage Payments</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
                 >Adverse Credit Problems</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="bad-credit.html"
+                class="dropdown-link hover-transition hover-pink"
                 >Low Deposit Schemes</a
-              >
-            </li>
-            <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >Zero Hour Contracts</a
               >
             </li>
           </ul>
@@ -133,7 +174,7 @@
           <label for="mortgages-input" class="dropdown no-display"
             >Mortgages</label
           >
-          <a href="#mortgages">Mortgages</a>
+          <a href="#mortgages" class="top-link">Mortgages</a>
           <input type="checkbox" id="mortgages-input" class="no-display" />
           <!-- Mortgages Drop Down -->
           <ul class="dropdown-menu">
@@ -184,7 +225,7 @@
           <label for="protection-input" class="dropdown no-display"
             >Protection</label
           >
-          <a href="#protection">Protection</a>
+          <a href="#protection" class="top-link">Protection</a>
           <input type="checkbox" id="protection-input" class="no-display" />
           <!-- Protection Drop Down -->
           <ul class="dropdown-menu">
@@ -881,6 +922,9 @@
         <h5 class="uppercase txt-900">7 Days Sat and Sun 11am-5pm</h5>
       </div>
     </div>
+    <!-- =============================
+    Footer
+  ================================== -->
     <footer class="flex bg-fuschia panel">
       <div class="footer-contact">
         <img src="assets/logo-alt.svg" alt="" />
