--- a/index.html
+++ b/index.html
@@ -99,42 +99,42 @@
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#no-credit-history"
                 class="dropdown-link hover-transition hover-pink"
                 >No Credit History</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#low-credit-score"
                 class="dropdown-link hover-transition hover-pink"
                 >Low Credit Score</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#ivas"
                 class="dropdown-link hover-transition hover-pink"
                 >IVA's</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#ccjs"
                 class="dropdown-link hover-transition hover-pink"
                 >CCJ's</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#bankruptcy"
                 class="dropdown-link hover-transition hover-pink"
                 >Bankruptcy</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#defaults"
                 class="dropdown-link hover-transition hover-pink"
                 >Defaults</a
               >
@@ -142,27 +142,27 @@
             <li class="dropdown-link-wrap">
               <a
                 href="bad-credit.html"
-                class="dropdown-link hover-transition hover-pink"
+                class="dropdown-link hover-transition hover-pink#self-employed"
                 >Self Employed No Accounts</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#missed-payments"
                 class="dropdown-link hover-transition hover-pink"
                 >Missed / Late Mortgage Payments</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#adverse-credit"
                 class="dropdown-link hover-transition hover-pink"
                 >Adverse Credit Problems</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a
-                href="bad-credit.html"
+                href="bad-credit.html#low-deposit"
                 class="dropdown-link hover-transition hover-pink"
                 >Low Deposit Schemes</a
               >
@@ -174,47 +174,63 @@
           <label for="mortgages-input" class="dropdown no-display"
             >Mortgages</label
           >
-          <a href="#mortgages" class="top-link">Mortgages</a>
+          <a href="mortgages.html" class="top-link">Mortgages</a>
           <input type="checkbox" id="mortgages-input" class="no-display" />
           <!-- Mortgages Drop Down -->
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html"
+                class="dropdown-link hover-transition hover-pink"
                 >Mortgages</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#remortgages"
+                class="dropdown-link hover-transition hover-pink"
                 >Re-Mortgages</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#buy-to-let"
+                class="dropdown-link hover-transition hover-pink"
                 >Buy-to-lets</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#first-time-buyers"
+                class="dropdown-link hover-transition hover-pink"
                 >First Time Buyers</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#let-to-buy"
+                class="dropdown-link hover-transition hover-pink"
                 >Let to buy</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#council-rtb"
+                class="dropdown-link hover-transition hover-pink"
                 >Council Right To Buy</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#commercial-borrowing"
+                class="dropdown-link hover-transition hover-pink"
                 >Commercial Finance</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="mortgages.html#bridge-finance"
+                class="dropdown-link hover-transition hover-pink"
                 >Bridge Finance</a
               >
             </li>
@@ -225,41 +241,56 @@
           <label for="protection-input" class="dropdown no-display"
             >Protection</label
           >
-          <a href="#protection" class="top-link">Protection</a>
+          <a href="protection.html" class="top-link">Protection</a>
           <input type="checkbox" id="protection-input" class="no-display" />
           <!-- Protection Drop Down -->
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="protection.html#protection-page-section"
+                class="dropdown-link hover-transition hover-pink"
                 >Protection</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="protection.html#life-insurance"
+                class="dropdown-link hover-transition hover-pink"
                 >Life Insurance</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >CIC</a
+              <a
+                href="protection.html#cic"
+                class="dropdown-link hover-transition hover-pink"
+                >Critical Illness Cover</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >IPU</a
+              <a
+                href="protection.html#ipu"
+                class="dropdown-link hover-transition hover-pink"
+                >Income Protection Insurance</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
-                >ASU</a
+              <a
+                href="protection.html#asu"
+                class="dropdown-link hover-transition hover-pink"
+                >Accident, Sickness, Unemployment</a
               >
             </li>
             <li class="dropdown-link-wrap">
-              <a href="" class="dropdown-link hover-transition hover-pink"
+              <a
+                href="protection.html#building-contents"
+                class="dropdown-link hover-transition hover-pink"
                 >Building & Contents Insurance</a
               >
             </li>
           </ul>
+        </li>
+        <li class="main-nav-link border-left border-right">
+          <a href="#">Contact Us</a>
         </li>
         <li class="main-nav-link border-left border-right">
           <a href="#">Contact Us</a>
